--- a/app/src/main/res/layout/activity_detalle_sitio.xml
+++ b/app/src/main/res/layout/activity_detalle_sitio.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,12 +10,17 @@
     android:layout_marginTop="0dp"
     tools:context=".Ciclista.DetalleSitioActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
     <fragment
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:id="@+id/map_detalle_sitio"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        tools:context=".Ciclista.DetalleSitioActivity" />
+        tools:context=".Detalle_sitio_map" />
 
     <Button
         android:layout_width="match_parent"
@@ -25,192 +30,188 @@
         android:textAllCaps="false"
         android:layout_marginRight="20dp"
         android:layout_height="wrap_content"
-        android:text="Ir a la ruta"
+        android:text="Ir al sitio"
         android:layout_marginBottom="20dp"
         android:textColor="@color/colorAccent"
         android:textSize="25dp"/>
 
-    <fragment
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="150dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginBottom="10dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Nombre"
+                    android:textSize="19dp"
+                    android:fontFamily="@font/baloo"
+                    android:textColor="#6C6666"/>
+
+                <TextView
+                    android:textAlignment="center"
+                    android:layout_gravity="center"
+                    android:id="@+id/nombre_sitio_detalle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="...."
+                    android:textSize="20dp"
+                    android:fontFamily="@font/baloo"
+                    android:textColor="#000"/>
+
+            </LinearLayout>
+
+
+        </LinearLayout>
 
         <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="5dp">
-
-        <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Distacia"
-        android:textSize="19dp"
-        android:fontFamily="@font/baloo"
-        android:textColor="#6C6666"/>
-
-        <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="4,94 km"
-            android:textSize="20dp"
-            android:fontFamily="@font/baloo"
-            android:textColor="#000"/>
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:gravity="center">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginLeft="-10dp"
+                android:layout_marginTop="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Longitud"
+                    android:textSize="19dp"
+                    android:fontFamily="@font/baloo"
+                    android:textColor="#6C6666"/>
+
+                <TextView
+                    android:layout_gravity="center"
+                    android:id="@+id/longitud_sitio_detalle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="-814"
+                    android:textSize="20dp"
+                    android:fontFamily="@font/baloo"
+                    android:textColor="#000"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginLeft="45dp"
+                android:layout_marginTop="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Latitud"
+                    android:textSize="19dp"
+                    android:fontFamily="@font/baloo"
+                    android:textColor="#6C6666"/>
+
+                <TextView
+                    android:layout_gravity="center"
+                    android:id="@+id/latitud_sitio_detalle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="3.15"
+                    android:textSize="20dp"
+                    android:fontFamily="@font/baloo"
+                    android:textColor="#000"/>
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginBottom="50dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="5dp">
+
+                <TextView
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Calificación"
+                    android:textSize="19dp"
+                    android:fontFamily="@font/baloo"
+                    android:textColor="#6C6666"/>
+
+                <RatingBar
+                    android:layout_gravity="center"
+                    android:isIndicator="true"
+                    android:progressBackgroundTint="#ccc"
+                    android:id="@+id/calificacion_sitio_detalle"
+                    android:layout_width="wrap_content"
+                    android:theme="@style/RatingBar.Yellow"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginBottom="10dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="5dp">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:src="@drawable/correo"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="50dp"
+                    android:layout_height="180dp"/>
+
+                <TextView
+                    android:id="@+id/detalle_sitio_detalle"
+                    android:layout_width="match_parent"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="50dp"
+                    android:layout_height="wrap_content"
+                    android:text="...."
+                    android:textSize="20dp"
+                    android:fontFamily="@font/baloo"
+                    android:textColor="#000"/>
+
+            </LinearLayout>
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginLeft="50dp"
-            android:layout_marginTop="5dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Dificultad técnica"
-                android:textSize="19dp"
-                android:fontFamily="@font/baloo"
-                android:textColor="#6C6666"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Moderado"
-                android:textSize="20dp"
-                android:fontFamily="@font/baloo"
-                android:textColor="#000"/>
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginRight="26dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="5dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Desnivel\nsubiendo"
-                android:textSize="19dp"
-                android:fontFamily="@font/baloo"
-                android:textColor="#6C6666"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="814 m"
-                android:textSize="20dp"
-                android:fontFamily="@font/baloo"
-                android:textColor="#000"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginLeft="45dp"
-            android:layout_marginTop="5dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tiempo total"
-                android:textSize="19dp"
-                android:fontFamily="@font/baloo"
-                android:textColor="#6C6666"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="3 h 15 min"
-                android:textSize="20dp"
-                android:fontFamily="@font/baloo"
-                android:textColor="#000"/>
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginRight="30dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="5dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Altitud\nmáxima"
-                android:textSize="19dp"
-                android:fontFamily="@font/baloo"
-                android:textColor="#6C6666"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2.276 m"
-                android:textSize="20dp"
-                android:fontFamily="@font/baloo"
-                android:textColor="#000"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginLeft="52dp"
-            android:layout_marginTop="5dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Altitud mínima"
-                android:textSize="19dp"
-                android:fontFamily="@font/baloo"
-                android:textColor="#6C6666"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="1.437 m"
-                android:textSize="20dp"
-                android:fontFamily="@font/baloo"
-                android:textColor="#000"/>
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-</LinearLayout>
+</ScrollView>
