--- a/app/src/main/res/layout/activity_detalle_sitio.xml
+++ b/app/src/main/res/layout/activity_detalle_sitio.xml
@@ -20,7 +20,7 @@
         android:id="@+id/map_detalle_sitio"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        tools:context=".Detalle_sitio_map" />
+        tools:context=".Ciclista.Detalle_sitio_map" />
 
     <Button
         android:layout_width="match_parent"
@@ -189,12 +189,35 @@
                 android:orientation="vertical"
                 android:layout_marginTop="5dp">
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:src="@drawable/correo"
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:weightSum="10"
                     android:layout_marginLeft="50dp"
                     android:layout_marginRight="50dp"
-                    android:layout_height="180dp"/>
+                    android:layout_height="180dp"
+                    android:layout_width="match_parent">
+
+                    <TextView
+                        android:id="@+id/autor_galeria_sitio_detalle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#000"
+                        android:textColor="#fff"
+                        android:textAlignment="textEnd"
+                        android:text="Autor"
+                        android:fontFamily="@font/baloo"/>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/galeria_sitio_detalle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:scrollbars="horizontal">
+
+
+                    </androidx.recyclerview.widget.RecyclerView>
+
+
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/detalle_sitio_detalle"
