--- a/app/src/main/res/layout/fragment_detalle_sitio_map.xml
+++ b/app/src/main/res/layout/fragment_detalle_sitio_map.xml
@@ -5,4 +5,4 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Detalle_sitio_map" />
+    tools:context=".Ciclista.Detalle_sitio_map" />
