--- a/app/src/main/res/layout/activity_detalle_sitio.xml
+++ b/app/src/main/res/layout/activity_detalle_sitio.xml
@@ -23,6 +23,7 @@
         tools:context=".Ciclista.Detalle_sitio_map" />
 
     <Button
+        android:id="@+id/btn_ir_sitio"
         android:layout_width="match_parent"
         android:background="@drawable/btnlogin"
         android:layout_marginTop="20dp"
