--- a/app/src/main/res/layout/activity_detalle_sitio.xml
+++ b/app/src/main/res/layout/activity_detalle_sitio.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,19 +10,22 @@
     android:layout_marginTop="0dp"
     tools:context=".Ciclista.DetalleSitioActivity">
 
+    <fragment
+        android:id="@+id/fragment_detallesitio"
+        android:name="com.fuenteoro.ciclismo.Ciclista.Detalle_sitio_map"
+        android:layout_width="match_parent"
+        android:layout_height="250dp" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-    <fragment
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:id="@+id/map_detalle_sitio"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        tools:context=".Ciclista.Detalle_sitio_map" />
-
-    <Button
+        <Button
         android:id="@+id/btn_ir_sitio"
         android:layout_width="match_parent"
         android:background="@drawable/btnlogin"
@@ -238,4 +241,6 @@
 
     </LinearLayout>
 
-</ScrollView>
+    </ScrollView>
+
+</LinearLayout>
