--- a/app/src/main/res/layout/activity_add_usuarios.xml
+++ b/app/src/main/res/layout/activity_add_usuarios.xml
@@ -1,28 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff"
-    tools:context=".Log_Reg.Fragment_Register">
+    tools:context=".Admin.ui.Usuarios.AddUsuariosActivity">
 
-    <!-- TODO: Update blank fragment layout -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="280dp"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_menu_perfil"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_marginBottom="50dp"
-                android:layout_marginTop="30dp">
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp">
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
@@ -30,7 +36,7 @@
                     app:errorEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/correo_register"
+                        android:id="@+id/correo_register_admin"
                         android:layout_width="match_parent"
                         android:layout_height="66dp"
                         android:hint="  Correo eléctronico "
@@ -50,7 +56,7 @@
                     app:errorEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/tel_regis"
+                        android:id="@+id/tel_regis_admin"
                         android:layout_width="match_parent"
                         android:layout_height="66dp"
                         android:hint="  Teléfono "
@@ -71,7 +77,7 @@
                     app:errorEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/nombres_regis"
+                        android:id="@+id/nombres_regis_admin"
                         android:layout_width="match_parent"
                         android:layout_height="66dp"
                         android:hint="  Nombres "
@@ -92,7 +98,7 @@
                     app:errorEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/apellidos_regis"
+                        android:id="@+id/apellidos_regis_admin"
                         android:layout_width="match_parent"
                         android:layout_height="66dp"
                         android:hint="  Apellidos "
@@ -114,7 +120,7 @@
                     app:passwordToggleEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/clave_register"
+                        android:id="@+id/clave_register_admin"
                         android:layout_width="match_parent"
                         android:layout_height="66dp"
                         android:hint="  Contraseña "
@@ -137,7 +143,7 @@
                     app:passwordToggleEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/claveconfir_register"
+                        android:id="@+id/claveconfir_register_admin"
                         android:layout_width="match_parent"
                         android:layout_height="66dp"
                         android:maxLength="10"
@@ -154,68 +160,21 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <com.google.android.material.checkbox.MaterialCheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="35dp"
-                        android:checked="true"
-                        android:enabled="false"/>
-
-                    <Button
-                        android:id="@+id/btn_info_register"
-                        android:layout_width="match_parent"
-                        android:layout_height="48dp"
-                        android:fontFamily="sans-serif-medium"
-                        android:background="@android:color/transparent"
-                        android:textAllCaps="false"
-                        android:layout_gravity="left"
-                        android:gravity="left"
-                        android:textColor="#000"
-                        android:text="Acepto los términos y condiciones y el Aviso \nde privacidad del portal"
-                        />
-
-                </LinearLayout>
                 <Button
-                    android:id="@+id/btn_register"
+                    android:id="@+id/btn_register_admin"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
-                    android:layout_marginTop="33dp"
+                    android:layout_marginTop="13dp"
                     android:layout_marginLeft="35dp"
                     android:layout_marginRight="35dp"
                     android:background="@drawable/btnlogin"
-                    android:text="Registrarme"
+                    android:text="Agregar administrador"
                     android:textColor="@color/colorPrimaryDark"
                     android:textAllCaps="false"
                     android:textSize="20dp"/>
 
-
-                <Button
-                    android:id="@+id/btn_verdemo_register"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginLeft="35dp"
-                    android:layout_marginRight="35dp"
-                    android:background="@android:color/transparent"
-                    android:text="Ver demo"
-                    android:textColor="@color/colorAccent"
-                    android:textAllCaps="false"
-                    android:textSize="20dp"/>
-
-
             </LinearLayout>
-
-
-
-
         </LinearLayout>
-
-
     </ScrollView>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
