--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -22,12 +23,43 @@
 
     <include layout="@layout/content_main" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:menu_colorNormal="@color/colorPrimaryDark"
+        app:menu_fab_label="Menú"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true">
 
+        <com.github.clans.fab.FloatingActionButton
+            android:layout_width="wrap_content"
+            app:fab_colorNormal="@color/colorPrimaryDark"
+            android:layout_height="wrap_content"
+            android:onClick="AddUsuarios"
+            android:src="@drawable/ic_menu_usuarios"
+            app:fab_label="Usuarios"/>
+
+        <com.github.clans.fab.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="AddSitios"
+            app:fab_colorNormal="@color/colorPrimaryDark"
+            android:src="@drawable/ic_menu_slideshow"
+            app:fab_label="Sitios"/>
+
+        <com.github.clans.fab.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:onClick="AddRutas"
+            app:fab_colorNormal="@color/colorPrimaryDark"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_menu_gallery"
+            app:fab_label="Rutas"/>
+
+    </com.github.clans.fab.FloatingActionMenu>
+    </RelativeLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
